--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>NixitHouse</title>
-    <%= csrf_meta_tags %>
+  	<head>
+  		<meta charset="utf-8">
+  	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  	    <meta name="viewport" content="width=device-width, initial-scale=1">
+  	    <meta name="description" content="Select the meal you would like to be served at MEST">
+  	    <meta name="author" content="Joshua Ihejimaizu, Duncan Murithi and Bongane Tshabangu">
+    	<%= csrf_meta_tags %>
+    	<title>MEST Menu</title>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+    	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    	<link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  	</head>
 
-  <body>
-    <%= yield %>
-  </body>
+  	<body>
+	  	<!-- Navigation -->
+	  	<nav id="top-nav" class="navbar navbar-default navbar-fixed-top" role="navigation">
+	  	    <div class="container">
+	  	        <div class="navbar-header">
+	  	            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse">
+	  			        <span class="sr-only">Toggle navigation</span>
+	  			        <span class="icon-bar"></span>
+	  			        <span class="icon-bar"></span>
+	  			        <span class="icon-bar"></span>
+	  			    </button>
+	  	            <a class="navbar-brand page-scroll" href="#page-top">
+	  	              	<%= image_tag("mest_logo.png", :class => "img-responsive", :alt => "MEST Logo") %>
+	  	            </a>
+	  	        </div>
+
+	  	        <!-- Collect the nav links for toggling -->
+	  	        <div class="collapse navbar-collapse" id="collapse">
+	  	            <ul class="nav navbar-nav navbar-right">
+	  	                <li class="active"><a href="#menu">Menu</a></li>
+	  	                <li><a href="#feedback">FAQs</a></li>
+	  	                <!-- <li><a href="#" class="calendar-toggle"><span class="glyphicon glyphicon-calendar"></span> October 27, 2016</a></li> -->
+	  	                <li class="dropdown">
+	  		                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+	  		                    <span class="glyphicon glyphicon-user"></span> 
+	  		                    <strong>Joshua</strong>
+	  		                	<span class="glyphicon glyphicon-chevron-down"></span>
+	  		                </a>
+	  		            </li>
+	  	            </ul>
+	  	        </div>
+	  	        <!-- /.navbar-collapse -->
+	  	    </div>
+	  	    <!--container-->
+	  	</nav>
+    	<%= yield %>
+
+    	<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  	</body>
+
+  	<footer>
+  		<nav id="bottom-nav" class="navbar navbar-default">
+  			<div class="container">
+  				<p>Copyright 2016, Team Nixit</p>
+  			</div>
+  		</nav>
+  	</footer>
 </html>
